--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "concurrently": "^7.0.0"
   },
   "scripts": {
-    "start": "concurrently \"cd ./server && npm run server\" \"cd ./client && npm run dev\""
+    "dev": "concurrently \"cd ./server && npm run server\" \"cd ./client && npm run dev\"",
+    "start": "concurrently \"cd ./server && npm run server\" \"cd ./client && npm run build\""
   }
 }
